--- a/TPWeb/WebContent/login.html
+++ b/TPWeb/WebContent/login.html
@@ -9,11 +9,11 @@
 		<table>
 			<tr>
 				<td>User</td>
-				<td><input name="user" /></td>
+				<td><input type="text" name="user" /></td>
 			</tr>
 			<tr>
-				<td>password</td>
-				<td><input name="password" /></td>
+				<td>Password</td>
+				<td><input type="password" name="password" /></td>
 			</tr>
 		</table>
 		<input type="submit" />
